adjust text to ensure it's balanced and does not overflow.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,19 @@ body {
 main {
   min-height: 100dvh;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+p,
+li,
+figcaption {
+  max-width: 65ch;
+}
 .heading {
   font-size: 1.25rem;
   line-height: calc(1.75rem / 1.25rem);
